# sheji

./: .gitignore  LICENSE  README.md  XIEYI
client/: .gitignore  CMakeLists.txt
client/src/: main.c
server/: CMakeLists.txt  config.json
server/doc/: API.md  DDoS 防护设计.md  数据库设计.md  认证架构设计.md
server/include/: easy_miniz.h  lib.h
server/src/: easy_miniz.c  lib.c  main.c
